# qingmu

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/qingmu-plugin/: Cargo.toml
crates/qingmu-plugin/src/: channel.rs  lib.rs  loader.rs  message.rs  ops.rs  runtime.rs
src/: icons.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  global.rs  main.rs  state.rs
src-tauri/src/manager/: clipboard_manager.rs  guesslang_manager.rs  mod.rs
src-tauri/src/manager/events_manager/: messages.rs  mod.rs
src-tauri/src/manager/plugin_manager/: mod.rs  plugin.rs
src-tauri/src/manager/plugin_manager/deno_runtime/: mod.rs  ops.rs  runtime.rs
src-tauri/src/models/: clipboard.rs  config.rs  mod.rs
src-tauri/src/tauri_extend/: setup.rs
src-tauri/src/utils/: mod.rs
src/assets/styles/: main.scss  tailwind.css
src/components/command/: command.tsx
src/components/providers/: index.ts  plugin-provider.tsx  theme-provider.tsx
src/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/layouts/default/: color-switcher.tsx  header.tsx  language-switcher.tsx  layout.tsx  menu-button.tsx  settings-button.tsx
src/lib/: clipboard.ts  i18n.ts
src/lib/hooks/: useTheme.ts
src/locales/: en.ts  index.ts  zh.ts
src/pages/: index.tsx  settings.tsx  welcome.tsx
src/plugins/: index.ts
src/plugins/_base/: base-plugin.ts  base-worker.ts  index.ts
src/plugins/json/: index.ts  view.tsx  worker.ts
src/types/: global.d.ts
