[workspace]
members = ["src-tauri", "crates/*"]

[workspace.dependencies]
anyhow = "1.0.81"
confy = "0.6.1"
deno_runtime = "0.150.0"
deno_core = "0.270.0"
deno_ast = "^0.34.1"
reqwest = "^0.11.20"

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"