[package]
name = "qingmu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

confy = "0.6.1"
once_cell = "1.19.0"
tauri-plugin-log = "2.0.0-beta"
clipboard-rs = "0.1.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
hyperpolyglot = { git = "https://github.com/StringKe/hyperpolyglot.git", branch = "master" }
uuid = "1.8.0"
deno_runtime = "0.150.0"
deno_core = "0.272.0"

