[package]
name = "qingmu-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"

tauri-plugin-log = "2.0.0-beta"
clipboard-rs = "0.1.4"
hyperpolyglot = { git = "https://github.com/StringKe/hyperpolyglot.git", branch = "master" }

anyhow.workspace = true
confy.workspace = true
deno_runtime.workspace = true
deno_core.workspace = true
deno_ast.workspace = true
reqwest.workspace = true

serde.workspace = true
tokio.workspace = true
serde_json.workspace = true
