[package]
name = "qingmu-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"

tauri-plugin-log = "2.0.0-beta"
clipboard-rs = "0.1.4"
hyperpolyglot = { git = "https://github.com/StringKe/hyperpolyglot.git", branch = "master" }

anyhow = "^1.0.81"
confy = "^0.6.1"
reqwest = "^0.12.2"

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
temp-dir = "0.1.13"
uuid = { version = "1.8.0", features = ["v4"] }
